<resources>
    <string name="app_name">The Game Box</string>
    <string name="player_name">Player name : </string>
    <string name="name">Enter your name</string>

    <string name="scores">SCORES</string>
    <string name="tictactoe">TIC TAC TOE</string>
    <string name="hangman">HANGMAN</string>
    <string name="minesweeper">MINESWEEPER</string>

    <string name="empty">The score list is empty</string>
    <string name="name1">Laure Daumal</string>
    <string name="name2">Hourey Halilou</string>
    <string name="name3">Jérémy Mikart</string>
    <string name="made">An application by :</string>
    <string name="madeat">Made at</string>
    <string name="flag">Flag left : </string>
    <string name="left"> 0</string>
    <string name="reset">RESET</string>

    <string name="letterA">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="g">G</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="empty_word">_ _ _ _ _ _ _</string>
    <string name="fails">Guesses remaining: </string>

    <string name="start">Start</string>
    <string name="retry">Retry</string>
    <string name="congrats">Congratulations!</string>
</resources>
