<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/activity_main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#000000"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:id="@+id/crédit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="110dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made"
            android:textSize="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name1"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name3"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/madeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/madeat"
        android:layout_alignParentRight="true"
        android:layout_below="@id/crédit"
        android:layout_marginRight="20dp"
        android:textSize="20dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/epita"
        android:layout_below="@id/madeat"
        android:layout_marginLeft="200dp" />

</RelativeLayout>
