<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minesweeper"
        android:textSize="45dp"
        android:textColor="#FF0000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="8"
        android:columnCount="8"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"
            />
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/my_button"/>


    </GridLayout>


    <TextView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag"
        android:layout_above="@id/grid"
        android:layout_alignStart="@id/grid"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:layout_above="@id/grid"
        android:layout_toRightOf="@id/flag"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_above="@id/grid"
        android:layout_toRightOf="@id/left"
        android:layout_alignEnd="@id/grid"/>

</RelativeLayout>